# anthropic-cookbook

./: .gitignore  README.md  main.py  pyproject.toml
context_compaction/: README.md  compaction_control.py  compaction_manual.py  session_memory.py  session_memory_prompt.py
context_compaction/utils/: customer_service_api.py  customer_service_tools.py
multi_doc_agents/: README.md  eval.py  main.py  main_v2.py  main_v3.py  v3_plan.md
programmatic_tool_calling/: README.md  main.py  tool_def.py
tool_search_embeddings/: README.md  main.py  main_v2.py  tool_lib.py
